--- a/percentcalc.html
+++ b/percentcalc.html
@@ -14,7 +14,7 @@
 
     <script src="js/formulas.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/js/lib/lz-string.min.js"></script>
+    <script src="js/lib/lz-string.min.js"></script>
     <script src="js/visualizer.js"></script>
     <script src="js/game.js"></script>
     <script src="js/ultHitboxes.js"></script>
