DI inputs not updating bug fix and Mario local move data

--- a/index.html
+++ b/index.html
@@ -623,21 +623,21 @@
                                         <td>X</td>
                                         <td>
                                             <input name="stickX" type="number" min="-127" max="127" step="1"
-                                                   ng-model="Calculator.GameVariables.Stick.x" ng-change="Calculator.GameVariables.UpdateDI()" />
+                                                   ng-model="Calculator.GameVariables.Stick.x" ng-change="Calculator.UpdateDI()" />
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>Y</td>
                                         <td>
                                             <input name="stickY" type="number" min="-127" max="127" step="1"
-                                                   ng-model="Calculator.GameVariables.Stick.y" ng-change="Calculator.GameVariables.UpdateDI()" />
+                                                   ng-model="Calculator.GameVariables.Stick.y" ng-change="Calculator.UpdateDI()" />
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>Angle</td>
                                         <td>
                                             <input name="stickAngle" type="number" min="0" max="359" step="1"
-                                                   ng-model="Calculator.GameVariables.StickAngle" ng-change="Calculator.GameVariables.UpdateDIAngle()" />
+                                                   ng-model="Calculator.GameVariables.StickAngle" ng-change="Calculator.UpdateDIAngle()" />
                                         </td>
                                     </tr>
                                 </table>
